@@ -22,14 +22,10 @@ import org.elasticsearch.test.ESTestCase;
 import org.elasticsearch.test.junit.listeners.ReproduceInfoPrinter;
 import org.elasticsearch.xpack.esql.CsvTests;
 import org.elasticsearch.xpack.esql.EsqlTestUtils;
+import org.elasticsearch.xpack.esql.TestAnalyzer;
 import org.elasticsearch.xpack.esql.analysis.Analyzer;
-import org.elasticsearch.xpack.esql.analysis.AnalyzerContext;
-import org.elasticsearch.xpack.esql.analysis.EnrichResolution;
 import org.elasticsearch.xpack.esql.core.expression.FoldContext;
 import org.elasticsearch.xpack.esql.core.tree.Node;
-import org.elasticsearch.xpack.esql.expression.function.EsqlFunctionRegistry;
-import org.elasticsearch.xpack.esql.inference.InferenceResolution;
-import org.elasticsearch.xpack.esql.parser.EsqlParser;
 import org.elasticsearch.xpack.esql.plan.EsqlStatement;
 import org.elasticsearch.xpack.esql.plan.QueryPlan;
 import org.elasticsearch.xpack.esql.plan.logical.LogicalPlan;
@@ -61,15 +57,17 @@ import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.BiFunction;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-import static org.elasticsearch.xpack.esql.EsqlTestUtils.TEST_VERIFIER;
+import static org.elasticsearch.xpack.esql.CsvTests.loadIndexResolution;
+import static org.elasticsearch.xpack.esql.EsqlTestUtils.TEST_PARSER;
+import static org.elasticsearch.xpack.esql.EsqlTestUtils.analyzer;
 import static org.elasticsearch.xpack.esql.EsqlTestUtils.randomMinimumVersion;
 import static org.elasticsearch.xpack.esql.EsqlTestUtils.withDefaultLimitWarning;
-import static org.elasticsearch.xpack.esql.analysis.AnalyzerTestUtils.defaultLookupResolution;
 import static org.elasticsearch.xpack.esql.plan.QuerySettings.UNMAPPED_FIELDS;
 
 /** See GoldenTestsReadme.md for more information about these tests. */
@@ -77,6 +75,12 @@ import static org.elasticsearch.xpack.esql.plan.QuerySettings.UNMAPPED_FIELDS;
 @LuceneTestCase.SuppressFileSystems("ExtrasFS") // ExtrasFS can create extraneous files in the output directory.
 public abstract class GoldenTestCase extends ESTestCase {
     private static final Logger logger = LogManager.getLogger(GoldenTestCase.class);
+
+    /**
+     * RandomizedRunner appends {@code {seed=[...]}} to {@link #getTestName()} for {@code -Dtests.iters} / {@code @Repeat} (See #144763).
+     */
+    private static final Pattern RANDOMIZED_RUNNER_SEED_SUFFIX_AT_END = Pattern.compile("(?:\\s+\\{seed=\\[[^\\]]+\\]\\})+$");
+
     private final Path baseFile;
 
     public GoldenTestCase() {
@@ -105,7 +109,7 @@ public abstract class GoldenTestCase extends ESTestCase {
         TransportVersion transportVersion,
         String... nestedPath
     ) {
-        String testName = extractTestName();
+        String testName = RANDOMIZED_RUNNER_SEED_SUFFIX_AT_END.matcher(getTestName()).replaceFirst("");
         new Test(baseFile, testName, nestedPath, esqlQuery, stages, searchStats, transportVersion).doTest();
     }
 
@@ -177,6 +181,15 @@ public abstract class GoldenTestCase extends ESTestCase {
         public void run() {
             runGoldenTest(esqlQuery, stages, searchStats, transportVersion, nestedPath);
         }
+
+        public Optional<Throwable> tryRun() {
+            try {
+                run();
+                return Optional.empty();
+            } catch (Throwable e) {
+                return Optional.of(e);
+            }
+        }
     }
 
     private record Test(
@@ -202,7 +215,7 @@ public abstract class GoldenTestCase extends ESTestCase {
         }
 
         private List<Tuple<Stage, TestResult>> doTests() throws IOException {
-            EsqlStatement statement = EsqlParser.INSTANCE.createStatement(esqlQuery);
+            EsqlStatement statement = TEST_PARSER.createStatement(esqlQuery);
             LogicalPlan parsedPlan = statement.plan();
             String[] queryPathParts = new String[nestedPath.length + 2];
             queryPathParts[0] = testName;
@@ -211,19 +224,14 @@ public abstract class GoldenTestCase extends ESTestCase {
             Path queryPath = PathUtils.get(basePath.toString(), queryPathParts);
             Files.createDirectories(queryPath.getParent());
             Files.writeString(queryPath, esqlQuery);
-            var analyzer = new Analyzer(
-                new AnalyzerContext(
-                    EsqlTestUtils.TEST_CFG,
-                    new EsqlFunctionRegistry(),
-                    CsvTests.loadIndexResolution(CsvTests.testDatasets(parsedPlan)),
-                    defaultLookupResolution(),
-                    new EnrichResolution(),
-                    InferenceResolution.EMPTY,
-                    transportVersion,
-                    statement.setting(UNMAPPED_FIELDS)
-                ),
-                TEST_VERIFIER
+            TestAnalyzer testAnalyzer = analyzer().addLanguagesLookup()
+                .addAnalysisTestsEnrichResolution()
+                .minimumTransportVersion(transportVersion)
+                .unmappedResolution(statement.setting(UNMAPPED_FIELDS));
+            loadIndexResolution(CsvTests.testDatasets(parsedPlan)).forEach(
+                (pattern, resolution) -> testAnalyzer.addIndex(pattern.indexPattern(), resolution)
             );
+            Analyzer analyzer = testAnalyzer.buildAnalyzer();
             List<Tuple<Stage, TestResult>> result = new ArrayList<>();
             var analyzed = analyzer.analyze(parsedPlan);
             if (stages.contains(Stage.ANALYSIS)) {
@@ -467,10 +475,9 @@ public abstract class GoldenTestCase extends ESTestCase {
         if (System.getProperty("golden.noactual") != null) {
             logger.debug("Skipping actual file creation because golden.noactual property is set");
         } else {
-            List<String> actualLines = testString.lines().map(GoldenTestCase::normalize).toList();
             Path actualPath = actualPath(output);
             logger.info("Creating actual file at " + actualPath.toAbsolutePath());
-            Files.write(actualPath, actualLines);
+            Files.writeString(actualPath, normalizeNameIds(normalizeSyntheticNames(full)), StandardCharsets.UTF_8);
         }
         return Test.TestResult.FAILURE;
     }
@@ -531,10 +538,6 @@ public abstract class GoldenTestCase extends ESTestCase {
 
     private static String normalize(String s) {
         return s.lines().map(String::strip).collect(Collectors.joining("\n"));
-    }
-
-    private String extractTestName() {
-        return getTestName();
     }
 
     /**
